{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 9,
  "lineage": "811d7077-66e0-cf6d-8485-8fa78e3801c0",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "jenkins_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2024-07-15T04:44:27.524-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/skilled-clover-429308-m2/global/firewalls/jenkins-allow-http",
            "log_config": [],
            "name": "jenkins-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/skilled-clover-429308-m2/global/networks/default",
            "priority": 1000,
            "project": "skilled-clover-429308-m2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skilled-clover-429308-m2/global/firewalls/jenkins-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "jenkins"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "jenkins_http_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-07-15T04:44:27.519-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/skilled-clover-429308-m2/global/firewalls/jenkins-http-firewall",
            "log_config": [],
            "name": "jenkins-http-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/skilled-clover-429308-m2/global/networks/default",
            "priority": 1000,
            "project": "skilled-clover-429308-m2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skilled-clover-429308-m2/global/firewalls/jenkins-http-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "jenkins"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}